--- a/Nodejs/tut/package.json
+++ b/Nodejs/tut/package.json
@@ -4,8 +4,10 @@
   "description": "a little test app",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "express-session": "^1.15.6"
   },
   "devDependencies": {},
   "scripts": {
